feat: repomind support to schemasculpt, jdk 25 migration