@@ -243,7 +243,7 @@ public class HardeningService {
     if (!"GET"
         .equalsIgnoreCase(
             operation.getTags() != null && !operation.getTags().isEmpty()
-                ? operation.getTags().get(0)
+                ? operation.getTags().getFirst()
                 : "GET")) {
       // Only apply caching to GET operations primarily
       return;
@@ -307,7 +307,7 @@ public class HardeningService {
     // Add idempotency key for POST/PUT/PATCH operations
     String method =
         operation.getTags() != null && !operation.getTags().isEmpty()
-            ? operation.getTags().get(0)
+            ? operation.getTags().getFirst()
             : "";
 
     if (List.of("POST", "PUT", "PATCH").contains(method.toUpperCase(Locale.ROOT))) {
